# hindsight

./: Cargo.toml  README.md  justfile  test_websocket_rapace.html
crates/hindsight/: Cargo.toml
crates/hindsight-protocol/: Cargo.toml
crates/hindsight-protocol/src/: events.rs  lib.rs  span.rs  trace_context.rs
crates/hindsight-server/: Cargo.toml
crates/hindsight-server/src/: lib.rs  main.rs  seed_data.rs  service_impl.rs  storage.rs
crates/hindsight-server/src/ui/: app.html
crates/hindsight-server/static/wasm/: hindsight_wasm.d.ts  hindsight_wasm.js  hindsight_wasm_bg.wasm  hindsight_wasm_bg.wasm.d.ts
crates/hindsight-wasm/: Cargo.toml
crates/hindsight-wasm/src/: components.rs  lib.rs  navigation.rs  routing.rs
crates/hindsight-wasm/src/components/: mod.rs  trace_card.rs  trace_detail.rs
crates/hindsight-wasm/src/components/shared/: header.rs  mod.rs  tab_bar.rs
crates/hindsight/examples/: http_upgrade_client.rs  query_traces.rs  simple_client.rs  test_classification.rs
crates/hindsight/src/: lib.rs  span_builder.rs  tracer.rs
crates/hindsight/tests/: http_upgrade.rs
xtask/src/: main.rs
