[workspace]
resolver = "2"
members = [
    "crates/hindsight",
    "crates/hindsight-server",
    "crates/hindsight-tui",
    "crates/hindsight-protocol",
    "crates/hindsight-wasm",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/hindsight"
authors = ["Amos Wenger <amos@bearcove.net>"]

[workspace.dependencies]
# Bearcove ecosystem
facet = { git = "https://github.com/facet-rs/facet", branch = "main" }
picante = { git = "https://github.com/bearcove/picante", branch = "main" }
rapace = { git = "https://github.com/bearcove/rapace", branch = "main", features = ["stream", "websocket"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# HTTP/WebSocket
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Tracing (for self-instrumentation)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

# Error handling
thiserror = "1"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.26"
crossterm = "0.27"

# Data structures
dashmap = "5"
parking_lot = "0.12"

# Crypto (for trace/span IDs)
getrandom = "0.2"
hex = "0.4"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
