[package]
name = "hindsight-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Protocol definitions for Hindsight distributed tracing"

[dependencies]
facet.workspace = true
# Only need rapace for the service macro, not the runtime
rapace = { git = "https://github.com/bearcove/rapace", branch = "main", default-features = false }

time.workspace = true
thiserror.workspace = true
getrandom.workspace = true
hex.workspace = true

[features]
# Enable js feature for WASM targets
js = ["getrandom/js"]
