[package]
name = "hindsight-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Standalone server for collecting and visualizing distributed traces"

[lib]
name = "hindsight_server"
path = "src/lib.rs"

[[bin]]
name = "hindsight"
path = "src/main.rs"

[dependencies]
hindsight-protocol = { path = "../hindsight-protocol" }
rapace.workspace = true

tokio.workspace = true
async-stream = "0.3"
tokio-tungstenite = "0.28"
tower = "0.4"

# HTTP server (only for serving static HTML)
axum.workspace = true
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
futures = "0.3"
tower-http = { version = "0.5", features = ["fs"] }

# CLI
clap.workspace = true

# Tracing (self-instrumentation - NOT sent to Hindsight!)
tracing.workspace = true
tracing-subscriber.workspace = true

# Storage
dashmap.workspace = true
parking_lot.workspace = true

# Utilities
thiserror.workspace = true
anyhow.workspace = true
