[package]
name = "hindsight-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "WASM client for Hindsight distributed tracing"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hindsight-protocol = { path = "../hindsight-protocol", features = ["js"] }
rapace = { git = "https://github.com/bearcove/rapace", branch = "main", default-features = false, features = ["websocket"] }
facet.workspace = true

# Sycamore for reactive UI
sycamore = { version = "0.9", features = ["web", "suspense"] }

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }

# Tracing to browser console
tracing = "0.1"
tracing-wasm = "0.2"

# Web APIs (minimal - Sycamore handles most DOM stuff)
web-sys = { version = "0.3", features = [
    "console",
    "Location",
    "Window",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
